<resources>
    <string name="app_name">CoderClothes</string>
    <string name="coderClothesMainLogo">CoderClothes</string>
    <string name="classy">Keep it classy, keep it functional</string>
    <string name="mainLogin">Login</string>
    <string name="mainCreateAccount">Create Account</string>
    <string name="LoginPageHeader">Login</string>
    <string name="LoginPageEnterButton">Enter</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="usernameHint">Enter username</string>
    <string name="passwordHint">Enter Password</string>
    <string name="no">No</string>
    <string name="user">USER</string>
    <string name="userMenuLogout">Logout</string>
    <string name="landingUsername">Username</string>
    <string name="landingWelcome">Welcome</string>
    <string name="landingAdminButton">Admin</string>
    <string name="loginLogout">Logout</string>
    <string name="admin_only">Admin Only</string>
    <string name="landingSearchButton">Search</string>
    <string name="landingCart">Cart</string>
    <string name="testing_results">Testing results</string>
    <string name="createEnterUsername">Enter Username</string>
    <string name="please_sign_up">Please Sign Up</string>
    <string name="createConfirm">Confirm</string>
    <string name="createEnterPassword">Enter Password</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="pajamas">Pajamas</string>
    <string name="pants">Pants</string>
    <string name="glasses">Glasses</string>
    <string name="PJsAddToCart">Add to cart</string>
    <string name="PantsAddToCart">Add to cart</string>
    <string name="add_to_cart_glasses">Add to cart</string>
    <string name="products">Products</string>
    <string name="beverage">Beverage</string>
    <string name="programmasPajamasButton">Programma\'s Pajamas</string>
    <string name="add_to_cart1">Add To Cart</string>
    <string name="coderoy_pants">Coderoy Pants</string>
    <string name="add_to_cart2">Add To Cart</string>
    <string name="searchGlassesButton">See-Sharp Blue Lens Glasses</string>
    <string name="add_to_cart3">Add To Cart</string>
    <string name="memory_leak_alkaline_beverage">Memory Leak Alkaline Beverage</string>
    <string name="add_to_cart4">Add To Cart</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="product_catalog">Product Catalog</string>
    <string name="searchCoderClothesLogo">CoderClothes</string>
    <string name="programma_s_pajamas">Programma\'s Pajamas</string>
    <string name="coderoy_pants2">Coderoy Pants</string>
    <string name="see_sharp_blue_lens_glasses">See-Sharp Blue-Lens Glasses</string>
    <string name="more_info1">More Info</string>
    <string name="more_info2">More Info</string>
    <string name="more_info3">More Info</string>
    <string name="more_info4">More Info</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="cart_total">Cart Total</string>
    <string name="complete_purchase">Complete Purchase</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="cart">Cart</string>
    <string name="item_subtotal">Item Subtotal</string>
    <string name="cart_item_1">Cart Item 1</string>
    <string name="cart_item_3">Cart Item 3</string>
    <string name="cart_item_4">Cart Item 4</string>
    <string name="username2">Username</string>
    <string name="cart_item_2">Cart Item 2</string>
    <string name="cartUsername">Username</string>
    <string name="price">Price</string>
    <string name="quantity2">Quantity</string>
    <string name="cart_1_product">Cart 1 Product</string>
    <string name="cart_1_price">Cart 1 Price</string>
    <string name="cart_1_quantity">Cart 1 Quantity</string>
    <string name="cart_2_product">Cart 2 Product</string>
    <string name="cart_3_product">Cart 3 Product</string>
    <string name="cart_3_price">Cart 3 Price</string>
    <string name="cart_4_price">Cart 4 Price</string>
    <string name="cart_4_quantity">Cart 4 Quantity</string>
    <string name="cart_3_quantity">Cart 3 Quantity</string>
    <string name="cart_2_quantity">Cart 2 Quantity</string>
    <string name="cart_2_price">Cart 2 Price</string>
    <string name="cart_4_product">Cart 4 Product</string>
    <string name="user_info">User Info</string>
    <string name="go_back">Go Back</string>
    <string name="delete_account">Delete Account</string>
    <string name="userInfoUsername">Username</string>
    <string name="UserInfoPassword">Password</string>
    <string name="admin_additional_functionality">Admin Additional Functionality</string>

</resources>