<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">


    <TextView
        android:id="@+id/cartLogo"
        android:layout_width="343dp"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"

        android:gravity="center"
        android:text="@string/coderClothesMainLogo"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cartCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cartCart"
        android:layout_width="49dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toTopOf="@id/cartUsernameDisplay"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/cart"

        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartLogo" />

    <!--
    <TextView
        android:id="@+id/cartItem1"
        android:layout_width="346dp"
        android:layout_height="49dp"
        android:layout_margin="12dp"
        android:layout_marginTop="20dp"
        android:hint="@string/cart_item_1"
        app:layout_constraintBottom_toTopOf="@id/cartItem2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartQuantity" />

    <TextView
        android:id="@+id/cartItem4"
        android:layout_width="346dp"
        android:layout_height="49dp"
        android:layout_margin="12dp"
        android:hint="@string/cart_item_4"
        app:layout_constraintBottom_toTopOf="@+id/cartTotalDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cartItem3" />

    <TextView
        android:id="@+id/cartItem2"
        android:layout_width="346dp"
        android:layout_height="49dp"
        android:layout_margin="12dp"
        android:hint="@string/cart_item_2"
        app:layout_constraintBottom_toTopOf="@id/cartItem3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cartItem1" />

    <TextView
        android:id="@+id/cartItem3"
        android:layout_width="346dp"
        android:layout_height="49dp"
        android:layout_margin="12dp"
        android:hint="@string/cart_item_3"
        app:layout_constraintBottom_toTopOf="@id/cartItem4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cartItem2" />

-->


    <Button
        android:id="@+id/buttonComplete"
        android:layout_width="203dp"
        android:layout_height="66dp"


        android:layout_margin="12dp"
        android:text="@string/complete_purchase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toEndOf="@id/buttonEmpty"
        app:layout_constraintTop_toBottomOf="@id/cartTotalDisplay" />

    <Button
        android:id="@+id/buttonEmpty"
        android:layout_width="132dp"
        android:layout_height="66dp"


        android:layout_margin="12dp"
        android:text="@string/empty_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonComplete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cartCartTotal" />

    <TextView
        android:id="@+id/cartSubtotal"
        android:layout_width="104dp"
        android:layout_height="25dp"
        android:layout_margin="8dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/quantity2"

        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCart1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cartPrice"
        app:layout_constraintTop_toBottomOf="@+id/cartUsernameDisplay"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/cartProduct"
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:layout_margin="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/product"

        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCart1"
        app:layout_constraintEnd_toStartOf="@id/cartPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartUsernameDisplay"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/cartPrice"
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/price"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutCart1"
        app:layout_constraintEnd_toStartOf="@+id/cartSubtotal"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toEndOf="@id/cartProduct"
        app:layout_constraintTop_toBottomOf="@id/cartUsernameDisplay"
        />

    <TextView
        android:id="@+id/cartTotalDisplay"
        android:layout_width="132dp"
        android:layout_height="48dp"


        android:gravity="center"
        android:hint="@string/cart_total"
        app:layout_constraintBottom_toTopOf="@id/buttonComplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cartCartTotal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCart4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cartCartTotal"
        android:layout_width="88dp"
        android:layout_height="39dp"


        android:gravity="center"

        android:text="@string/total"

        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEmpty"
        app:layout_constraintEnd_toStartOf="@+id/cartTotalDisplay"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCart4"
        app:layout_constraintVertical_bias="0.301" />

    <TextView
        android:id="@+id/cartUsernameDisplay"
        android:layout_width="280dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/cartUsername"
        app:layout_constraintBottom_toTopOf="@id/cartPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartCart" />

    <LinearLayout
        android:id="@+id/linearLayoutCart1"
        android:layout_width="375dp"
        android:layout_height="86dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutCart2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cartPrice"
        android:layout_margin="12dp"

    >

        <TextView
            android:id="@+id/cart1Product"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/cart_1_product"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/cart1Price"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/cart_1_price"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/cart1Quantity"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/cart_1_quantity"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCart2"
        android:layout_width="375dp"
        android:layout_height="86dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutCart3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12dp">

        <TextView
            android:id="@+id/cart2Product"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/cart_2_product"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/cart2Price"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/cart_2_price"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/cart2Quantity"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/cart_2_quantity"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCart3"
        android:layout_width="375dp"
        android:layout_height="86dp"
        android:orientation="horizontal"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutCart4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/cart3Product"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/cart_3_product"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/cart3Price"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cart_3_price"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/cart3Quantity"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/cart_3_quantity"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCart4"
        android:layout_width="375dp"
        android:layout_height="86dp"
        android:orientation="horizontal"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutCart3"
>

        <TextView
            android:id="@+id/cart4Product"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/cart_4_product"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/cart4Price"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/cart_4_price"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/cart4Quantity"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cart_4_quantity"
            android:textSize="12sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>