<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPageActivity">


    <TextView
        android:id="@+id/CoderClothesMainLogo"
        android:layout_width="336dp"
        android:layout_height="89dp"

        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/coderClothesMainLogo"
        android:textSize="44sp"
        android:textStyle="bold"

        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/landingWelcome"
        android:layout_width="146dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/landingWelcome"
        android:textSize="20sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CoderClothesMainLogo" />

    <EditText
        android:id="@+id/landingUsername"
        android:layout_width="170dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/landingUsername"

        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/landingWelcome" />

    <Button
        android:id="@+id/landingAdminButton"
        android:layout_width="178dp"
        android:layout_height="93dp"
        android:layout_marginTop="40dp"
        android:text="@string/landingAdminButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landingUsername"
        android:visibility="gone"/>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/loginLogout"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/landingCart" />

    <Button
        android:id="@+id/buttonAdmin"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:text="@string/admin_only"

        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoutButton"
        app:layout_constraintVertical_bias="0.146" />

    <Button
        android:id="@+id/landingSearch"
        android:layout_width="160dp"
        android:layout_height="60dp"

        android:layout_marginTop="16dp"
        android:gravity="center|center_vertical"

        android:text="@string/landingSearchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/landingUsername" />

    <Button
        android:id="@+id/landingCart"
        android:layout_width="160dp"
        android:layout_height="60dp"

        android:layout_marginTop="16dp"
        android:gravity="center|center_vertical"

        android:text="@string/user_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/landingSearch" />

    <TextView
        android:id="@+id/landingAdminAdditional"
        android:layout_width="267dp"
        android:layout_height="102dp"
        android:hint="Admin Additional Functionality"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>