<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfoActivity">

    <TextView
        android:id="@+id/CoderClothesMainLogo"
        android:layout_width="280dp"
        android:layout_height="106dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/coderClothesMainLogo"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userInfoUsernameDisplay"
        android:layout_width="241dp"
        android:layout_height="59dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:hint="@string/userInfoUsername"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/userInfoDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CoderClothesMainLogo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/userInfoDelete"
        android:layout_width="183dp"
        android:layout_height="73dp"
        android:layout_marginTop="60dp"
        android:text="@string/delete_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userInfoPasswordDisplay" />

    <Button
        android:id="@+id/userInfoGoBack"
        android:layout_width="183dp"
        android:layout_height="73dp"
        android:layout_marginTop="48dp"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfoDelete"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/userInfoPasswordDisplay"
        android:layout_width="235dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/UserInfoPassword"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfoUsernameDisplay" />

</androidx.constraintlayout.widget.ConstraintLayout>