<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <TextView
        android:id="@+id/CoderClothesMainLogo"
        android:layout_width="310dp"
        android:layout_height="122dp"
        android:gravity="center"
        android:text="@string/coderClothesMainLogo"
        android:textSize="44sp"
        android:textStyle="bold"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toTopOf="@+id/pleaseSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <TextView
        android:id="@+id/pleaseSignUp"
        android:layout_width="240dp"
        android:layout_height="80dp"

        android:gravity="center"
        android:text="@string/please_sign_up"
        android:textSize="24sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/createUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CoderClothesMainLogo" />

    <EditText
        android:id="@+id/createUsername"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:inputType="text"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:hint="@string/createEnterUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pleaseSignUp" />

    <EditText
        android:id="@+id/createPassword"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/createEnterPassword"
        app:layout_constraintBottom_toTopOf="@id/createConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createUsername"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/createConfirm"
        android:layout_width="229dp"
        android:layout_height="100dp"

        android:text="@string/createConfirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>