<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/CoderClothesMainLogo"
        android:layout_width="280dp"
        android:layout_height="106dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/coderClothesMainLogo"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/classy"
        android:layout_width="271dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/classy"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CoderClothesMainLogo" />

    <Button
        android:id="@+id/mainLoginButton"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="68dp"
        android:text="@string/mainLogin"
        app:layout_constraintBottom_toTopOf="@+id/mainCreateAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classy"
        app:layout_constraintVertical_bias="0.612" />

    <Button
        android:id="@+id/mainCreateAccountButton"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginBottom="192dp"
        android:text="@string/mainCreateAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>